--- a/style.css
+++ b/style.css
@@ -60,10 +60,9 @@ nav a:hover {
 }
 
 /* Estilo para imagens grandes de conteúdo (se houver) */
-.header-image {
-    max-width: 100%;
+.header-icon {
+    width: 180px;         
     height: auto;
     display: block;
-    margin: 2.5rem 0 4rem 0;
-    border: 1px solid #ddd;
+    mix-blend-mode: multiply; 
 }
