--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="/style.css">
-    <title>Glosa</title>
+    <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
+    <title>Glosa | .surtos linguísticos</title>
 </head>
 <body>
 
