--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
+   <link rel="stylesheet" href="/glosa/style.css">
     <title>Glosa | .surtos linguísticos</title>
 </head>
 <body>
