--- a/_includes/header.html
+++ b/_includes/header.html
@@ -3,6 +3,7 @@
         <a href="{{ '/' | relative_url }}">
             <img src="{{ '/header-tree.png' | relative_url }}" alt="Árvore Gerativista" class="header-icon">
         </a>
+        <h1>.glosa | .surtos linguísticos</h1>
         <nav>
             <a href="{{ '/' | relative_url }}">Início</a>
             <a href="{{ '/producao-tecnica' | relative_url }}">Produção Técnica</a>
