--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,13 +1,15 @@
 <header class="site-header">
-    <a href="{{ '/' | relative_url }}">
-        <img src="{{ '/header-tree.png' | relative_url }}" alt="Árvore Gerativista" class="header-icon">
+    <a href="/">
+        <img src="/assets/images/logo-arvore.png" alt="Logo .glosa" class="header-icon">
     </a>
-    <h1>.glosa | .surtos linguísticos</h1>
+    
+    <div class="header-text">
+        <h1>.glosa | .surtos linguísticos</h1>
+    </div>
 </header>
 
 <nav>
-    <a href="{{ '/' | relative_url }}">/início</a>
-    <a href="{{ '/producao-tecnica' | relative_url }}">/produção_técnica</a>
-    <a href="https://github.com/eandrade-ling/glosa" target="_blank">/repositório_raiz</a>
+    <a href="/">/início</a>
+    <a href="/producao-tecnica">/.produção técnica</a>
+    <a href="/repositorio-raiz">/repositório_raiz</a>
 </nav>
-</header>
