--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,6 +10,6 @@
 
 <nav>
     <a href="/">/início</a>
+    <a href="/sobre">/.sobre</a>
     <a href="/producao-tecnica">/.produção técnica</a>
-    <a href="/repositorio-raiz">/repositório_raiz</a>
 </nav>
