--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
-    <a href="/">
-        <img src="/assets/images/logo-arvore.png" alt="Logo .glosa" class="header-icon">
+    <a href="{{ site.baseurl }}/">
+        <img src="{{ site.baseurl }}/assets/images/logo-arvore.png" alt="Logo .glosa" class="header-icon">
     </a>
     
     <div class="header-text">
@@ -9,7 +9,7 @@
 </header>
 
 <nav>
-    <a href="/">/início</a>
-    <a href="/sobre">/.sobre</a>
-    <a href="/producao-tecnica">/.produção técnica</a>
+    <a href="{{ site.baseurl }}/">/início</a>
+    <a href="{{ site.baseurl }}/sobre">/.sobre</a>
+    <a href="{{ site.baseurl }}/producao-tecnica">/.produção técnica</a>
 </nav>
