--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,8 +2,8 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
+   <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
    <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
-   <link rel="icon" type="image/png" href="{{ '/header-tree.png' | relative_url }}">
     <title>.glosa | .surtos linguísticos</title>
 </head>
 <body>
