--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-   <link rel="shortcut icon" type="image/x-icon" href="{{ site.baseurl }}/assets/images/favicon.ico">
+   <link rel="icon" type="image/png" href="{{ site.baseurl }}/assets/images/header-tree.png">
    <link rel="stylesheet" href="{{ '/style.css' | relative_url }}">
     <title>.glosa | .surtos linguísticos</title>
 </head>
