--- a/_includes/header.html
+++ b/_includes/header.html
@@ -11,5 +11,6 @@
 <nav>
     <a href="{{ site.baseurl }}/">/início</a>
     <a href="{{ site.baseurl }}/sobre">/.sobre</a>
+    <a href="{{ site.baseurl }}/surtos">/.surtos</a>
     <a href="{{ site.baseurl }}/producao-tecnica">/.produção técnica</a>
 </nav>
