--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -15,5 +15,16 @@
         {{ content }}
     </main>
 
+    <footer>
+        <nav>
+            <a href="https://www.linkedin.com/in/ev-andrade" target="_blank">
+                <i class="fa-brands fa-linkedin"></i> /linkedin
+            </a>
+            <a href="https://twitter.com/glosalab" target="_blank">
+                <i class="fa-brands fa-x-twitter"></i> /twitter
+            </a>
+        </nav>
+    </footer>
+
 </body>
 </html>
