--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,7 +4,7 @@ layout: default
 
 <article class="post-entry">
     <header class="post-header">
-        <h1 class="post-title-main">// {{ page.title | downcase }}</h1>
+        <h1 class="post-title-main">.{{ page.title | downcase }}</h1>
         <div class="post-metadata">
             [data: {{ page.date | date: "%d-%m-%y" }}] 
             {% if page.tags.size > 0 %}
