--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: default
 <article class="post-entry">
     <header class="post-header">
         <h1 class="post-title-main">.{{ page.title | downcase }}</h1>
-        <div class="post-metadata">
+        <div style="font-size: 0.8rem; color: #999; margin-bottom: 2rem;">
             [data: {{ page.date | date: "%d-%m-%y" }}] 
             {% if page.tags.size > 0 %}
                 [tags: {{ page.tags | join: ", " | downcase }}]
@@ -16,8 +16,4 @@ layout: default
     <div class="post-body">
         {{ content }}
     </div>
-
-    <footer class="post-footer">
-        <p>---<br>EOL (end of line) // log_closed</p>
-    </footer>
 </article>
