--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,11 +20,11 @@
             <a href="https://www.linkedin.com/in/ev-andrade" target="_blank">
                 <i class="fa-brands fa-linkedin"></i> /linkedin
             </a>
-            <a href="https://instagram.com/glosa.lab" target="_blank">
+            <a href="https://www.instagram.com/glosalabig/" target="_blank">
                 <i class="fa-brands fa-instagram"></i> /instagram
             </a>
             <a href="https://twitter.com/glosalab" target="_blank">
-                <i class="fa-brands fa-x-twitter"></i> /xuíter
+                <i class="fa-brands fa-x-twitter"></i> /twitter
             </a>
         </nav>
     </footer>
